syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "org.udemy.models";



message EmailCredentials {
  string email = 1;
  string password = 2;
}


message PhoneOtp {
  int32 number = 1;
  int32 code =2;
}

message Credentials {
  oneof mode {
    EmailCredentials emailMode = 1;
    PhoneOtp phoneOtp = 2;
  }
}
